# MWSP-final-smart-bollard-system-blog

./: .gitignore  go.mod  go.sum  url.txt
Client_System/app/src/main/java/com/playjnj/photoviewer/: BollardSettings.java  MainActivity.java
Client_System/app/src/main/res/menu/: main_menu.xml
Client_System/app/src/main/res/values/: themes.xml
Edge_System/: changedetection.py  detect.py  pyproject.toml
PhotoBlogServer/bollard/: models.py  serializers.py  views.py
PhotoBlogServer/bollard/grpc_proto/: result.proto
PhotoBlogServer/bollard/migrations/: 0001_initial.py
PhotoBlogServer/bollard/templates/bollard/: setting.html
PhotoBlogServer/photoblogserver/: settings.py  urls.py
PhotoViewer/app/src/main/: AndroidManifest.xml
PhotoViewer/app/src/main/java/com/playjnj/photoviewer/: BollardApiService.java  BollardControlActivity.java  BollardState.java  SystemStatus.java
PhotoViewer/app/src/main/res/layout/: activity_bollard_control.xml  activity_main.xml
Service_System/: pyproject.toml
Service_System/bollard/: admin.py  apps.py  urls.py
Service_System/bollard/grpc_proto/: result_pb2.py  result_pb2_grpc.py
Service_System/bollard/templates/bollard/: base.html  dashboard.html
Service_System/bollard/utils/: analyzer.py  blog_integration.py  grpc_client.py
arduino/: client.ino
rasp_main/: client.go
rasp_proto/: result.pb.go  result.proto  result_grpc.pb.go
rasp_servo/: rasp_servo.go
rasp_zigbee/: rasp_zigbee.go
